# Demo-Submodules-Main

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/core/: main.cpp
src/core/corefunction/: corefunction.cpp  corefunction.h
